infra/kong/ingress/roduct-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-service
  namespace: shoppay-product

  annotations:
    kubernetes.io/ingress.class: kong

spec:
  ingressClassName: kong

  rules:
  - http:
      paths:
      - path: /api/products
        pathType: Prefix

        backend:
          service:
            name: product-service

            port:
              number: 4001
